--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "moment": "^2.18.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.4.0",
+    "react-modal": "^2.2.4",
+    "react-youtube": "^7.4.0",
     "wu": "^2.1.0"
   }
 }
